test/fail/basic_syntax/wrong_arg_type_empty_func.lly
#[
SyntaxError: Function f, argument #1 is invalid:
Expected Type: function ()
Received Type: integer
Where: File "wrong_arg_type_empty_func.lly" at line 10
]#

define f(g: function()) {  }

f(10)
